@@ -22,23 +22,6 @@
 require_once dirname(__FILE__).'/include/config.inc.php';
 require_once dirname(__FILE__).'/include/forms.inc.php';
 
-if (hasRequest('action') && getRequest('action') === 'host.export' && hasRequest('hosts')) {
-	$page['file'] = 'zbx_export_hosts.xml';
-	$page['type'] = detect_page_type(PAGE_TYPE_XML);
-
-	$exportData = true;
-}
-else {
-	$page['title'] = _('Configuration of hosts');
-	$page['file'] = 'hosts.php';
-	$page['type'] = detect_page_type(PAGE_TYPE_HTML);
-	$page['scripts'] = ['multiselect.js'];
-
-	$exportData = false;
-}
-
-require_once dirname(__FILE__).'/include/page_header.php';
-
 // VAR	TYPE	OPTIONAL	FLAGS	VALIDATION	EXCEPTION
 $fields = [
 	'hosts' =>					[T_ZBX_INT, O_OPT, P_SYS,			DB_ID,		null],
@@ -151,13 +134,38 @@ $fields = [
 	'sort' =>					[T_ZBX_STR, O_OPT, P_SYS, IN('"name","status"'),						null],
 	'sortorder' =>				[T_ZBX_STR, O_OPT, P_SYS, IN('"'.ZBX_SORT_DOWN.'","'.ZBX_SORT_UP.'"'),	null]
 ];
-check_fields($fields);
+
+function prepare_page_header($type) {
+	global $page;
+
+	if ($type === 'html') {
+		$page['title'] = _('Configuration of hosts');
+		$page['file'] = 'hosts.php';
+		$page['type'] = detect_page_type(PAGE_TYPE_HTML);
+		$page['scripts'] = ['multiselect.js'];
+	}
+	elseif ($type === 'xml') {
+		$page['file'] = 'zbx_export_hosts.xml';
+		$page['type'] = detect_page_type(PAGE_TYPE_XML);
+	}
+}
+
+$fields_error = check_fields_raw($fields);
+if ($fields_error & ZBX_VALID_ERROR) {
+	// Halt on a HTML page with errors.
+
+	prepare_page_header('html');
+	require_once dirname(__FILE__).'/include/page_header.php';
+
+	invalid_url();
+}
 
 /*
  * Permissions
  */
+$access_deny = false;
 if (getRequest('groupid') && !isWritableHostGroups([getRequest('groupid')])) {
-	access_deny();
+	$access_deny = true;
 }
 if (getRequest('hostid')) {
 	$hosts = API::Host()->get([
@@ -167,8 +175,17 @@ if (getRequest('hostid')) {
 	]);
 
 	if (!$hosts) {
-		access_deny();
+		$access_deny = true;
 	}
+}
+
+if ($access_deny) {
+	// Halt on a HTML page with errors.
+
+	prepare_page_header('html');
+	require_once dirname(__FILE__).'/include/page_header.php';
+
+	access_deny();
 }
 
 $hostIds = getRequest('hosts', []);
@@ -176,21 +193,38 @@ $hostIds = getRequest('hosts', []);
 /*
  * Export
  */
-if ($exportData) {
+if (hasRequest('action') && getRequest('action') === 'host.export' && hasRequest('hosts')) {
 	$export = new CConfigurationExport(['hosts' => $hostIds]);
 	$export->setBuilder(new CConfigurationExportBuilder());
 	$export->setWriter(CExportWriterFactory::getWriter(CExportWriterFactory::XML));
-	$exportData = $export->export();
 
-	if (hasErrorMesssages()) {
+	$export_data = $export->export();
+
+	if ($export_data === false) {
+		prepare_page_header('html');
+		require_once dirname(__FILE__).'/include/page_header.php';
+
+		access_deny();
+	}
+	elseif (hasErrorMesssages()) {
+		prepare_page_header('html');
+		require_once dirname(__FILE__).'/include/page_header.php';
+
 		show_messages();
 	}
 	else {
-		print($exportData);
+		prepare_page_header('xml');
+		require_once dirname(__FILE__).'/include/page_header.php';
+
+		print($export_data);
 	}
 
 	exit;
 }
+
+// Using HTML for the rest of functions.
+prepare_page_header('html');
+require_once dirname(__FILE__).'/include/page_header.php';
 
 /*
  * Filter
