@@ -475,6 +475,7 @@ New features:
 ..F....PS. [ZBXNEXT-5176,ZBXNEXT-5205] blocked zero item history/trends period being overridden by global configuration (miks, wiper)
 
 Bug fixes:
+..F....... [ZBX-16135] fixed error messages in XML export files (averza)
 A......... [ZBX-16213] fixed PostgreSQL bad performance on history tables (averza)
 ..F....... [ZBX-16176] preserve trailing spaces in history values (averza)
 ..F....... [ZBX-16169] improved performance of map navigation tree widget (miks)
@@ -552,6 +553,7 @@ New features:
 ..F....... [ZBX-16069] upgraded jQuery version v1.10.2 -> v3.3.1 and jQueryUI v1.10.3 -> v1.12.1 (talbergs)
 
 Bug fixes:
+..F....... [ZBX-16135] fixed error messages in XML export files (averza)
 ..F....... [ZBX-16032] changed application filtering to partial name search (vmurzins)
 ...G...... [ZBX-15915] fixed linking error if round() is undefined (akozlovs)
 ....I..... [ZBX-16074] added file revision number generation for compilation on MS Windows (MVekslers)
